Fix a problem that user validated dangerous download cannot resume

After a dangerous download become user validated, it should be treated as not dangerous.
However, Chrome currently still checks for downloadUrl and referer.
This CL fixes the problem and added a test for the case.

BUG=682468

Review-Url: https://codereview.chromium.org/2641063002
Cr-Commit-Position: refs/heads/master@{#444941}

Former-commit-id: d5d9f828c9c9366fa219e6a7aad6eccfdd2dd1fd